@@ -9,6 +9,8 @@
 
 - new development files
   - =Cask=
+  - =Makefile=
+    - support for =build=, =install=, and =test= recipes
 
 * 0.4.0 - 2020-05-09
 
